--- a/main.css
+++ b/main.css
@@ -1,6 +1,12 @@
-html, body {
-    width: 100%; height: 100%; padding: 0; margin: 0;
+body {
+    padding: 0;
+    margin: 0;
 }
+html, body, #map {
+    height: 100%;
+    width: 100vw;
+}
+
 #map-canvas { 
     width: 100%; height: 100%; padding: 0; margin: 0;
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAMAAABhq6zVAAAACVBMVEUAAADl5eX////EwbxGAAAAAXRSTlMAQObYZgAAABFJREFUeAFjYESCKACdT38ZAAWhAAxcPQc7AAAAAElFTkSuQmCC) repeat scroll 0 0 #f9f9f9;
